--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,7 +2,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
-	height: 6vh;
+	height: 7vh;
 }
 
 .logo {
@@ -11,6 +11,7 @@
 	font-size: 22px;
 	background-color: #eceff1;
 	font-family: Roboto;
+	font-weight: 700;
 	height: 100%;
 	display: flex;
 	align-items: center;
@@ -28,7 +29,8 @@
 }
 
 .rc-slider-track {
-	background-color: transparent;
+	background-color: #76ced7;
+	height: 8px;
 }
 
 .rc-slider-rail {
@@ -39,9 +41,9 @@
 .rc-slider-handle:active,
 .rc-slider-handle:focus,
 .rc-slider-handle:hover {
-	background-color: green;
+	background-color: #76ced7;
 	outline: none;
-	border: 2px solid green;
+	border: 2px solid #76ced7;
 	box-shadow: none;
 	width: 13px;
 	height: 13px;
